--- a/maquette-brief1/css/style.css
+++ b/maquette-brief1/css/style.css
@@ -3,3 +3,82 @@
     padding: 0;
     box-sizing: border-box;
 }
+
+body {
+    font-family: sans-serif;
+}
+
+header {
+    background-image: url('../img/banner_bg.jpg');
+    background-size: 100%;
+    background-position: top center;
+    padding: 4em 13em 3em;
+}
+
+a, h1, .headtext p {
+    text-decoration: none;
+    color: #fafafa;
+}
+
+ul {
+    list-style: none;
+}
+
+.maintitle, .tinker, .html, ul a {
+    text-transform: uppercase;
+}
+.maintitle {
+    font-weight: bold;
+    font-size: 30px;
+}
+.t {
+    color: #F6C45C;
+    font-weight: Bold;
+    font-size: 30px;
+}
+.flex {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+}
+.navmenu {
+    width: 40%;
+}
+h1 {
+    text-transform: capitalize;
+    font-size: 45px;
+    margin-top: 6.7em;
+}
+
+.tinker {
+    color: #F69536;
+}
+
+.html {
+    color: #3CC4D0;
+}
+.headtext {
+    text-align: center;
+    margin-top: 4em; 
+}
+
+.headtext p{
+    width: 50%;
+    margin: auto;
+    font-size: 18px;
+    line-height: 35px;
+    margin: 0.5em auto ;
+}
+.button {
+    display: inline-block;
+    padding: 1em;
+    border-radius: 25px;
+    background-color: #fafafa;
+}
+.button a {
+    text-transform: uppercase;
+    color: #000;
+    font-weight: 700;
+    letter-spacing: 1px;
+    margin: 1em auto;
+}
