--- a/wireframe/css/style.css
+++ b/wireframe/css/style.css
@@ -113,9 +113,10 @@ article {
     background: #e0e0e0;
 }
 iframe {
+    display: block;
     max-width: 80%;
     max-height: 80%;
-    margin-top: 2em;
+    margin: 2em auto 0;
 }
 h2 {
     background: #0090B2;
