--- a/maquette-brief1/css/style.css
+++ b/maquette-brief1/css/style.css
@@ -5,7 +5,8 @@
 }
 
 body {
-    font-family: sans-serif;
+    font-family: 'Open Sans', sans-serif;
+    background-color: #383B3C;
 }
 img {
     max-width: 100%;
@@ -41,7 +42,7 @@ ul {
 .t {
     color: #F6C45C;
     font-weight: Bold;
-    font-size: 30px;
+    font-size: 35px;
 }
 .flex {
     display: flex;
@@ -90,7 +91,7 @@ h1 {
     letter-spacing: 1px;
     margin: auto;
 }
-.fa-bars {
+.burger1 {
     display: none;
     color: white;
     background-color: rgba(0,0,0,0.5);
@@ -141,18 +142,236 @@ h1 {
     margin: 2em 0;
 }
 
-.buttonread {
+.buttonread, .buttoncontact{
     background-color: #3DC1CD;
-    border-radius: 10px;
+    border-radius: 25px;
     width: 75%;
     padding: 0.5em;
     margin: 1em auto 4em;
     text-transform: uppercase;
 }
 
+.gallerymenu, .blogmenu {
+    color: #fafafa;
+    width: 30%;
+    padding: 10em 4em 0 10em;
+}
+.gallerymenu {
+    background-color: #3CC4D0;
+}
+.gallerymenu h2, .blogmenu h2, .contact h2 {
+    text-transform: uppercase;
+    font-weight: 700;
+    margin: 1em 0;
+    padding-bottom: 1em;
+    border-bottom: 1px #fafafa solid;
+}
+.gallerymenu p, .blogmenu p {
+    margin: 1em 0;
+    font-weight: 600;
+    line-height: 25px;
+    font-size: 16px;
+}
+.gallerymenu ul {
+    margin-top: 3em;
+}
+.gallerymenu ul li {
+    font-weight: 600;
+    line-height: 45px;
+    font-size: 20px;
+}
+.gallerymenu ul li:first-child {
+    color: #F6C35B;
+}
+.portfolio {
+    background-color: #fafafa;
+}
+.portfolio, .blog {
+    display: flex;
+}
+.gallery {
+    padding: 2em;
+    display: grid;
+    grid-template-columns: repeat(6, 1fr);
+}
+.gallery1 {
+    grid-column: 1 / 4;
+    grid-row: 1;
+}
+.gallery2 {
+    grid-column: 4 / 7;
+    grid-row: 1;
+}
+.gallery3 {
+    grid-column: 1 / 4;
+    grid-row: 2;
+}
+.gallery4 {
+    grid-column: 4 / 7;
+    grid-row: 2;
+}
+.gallery5 {
+    grid-column: 1 / 4;
+    grid-row: 3;
+}
+.gallery6 {
+    grid-column: 4 / 7;
+    grid-row: 3;
+}
+.quote {
+    background: #F6C45C;
+    padding: 3em 0;
+    text-align: center;
+}
+.quote p{
+    color: #fafafa;
+    width: 50%;
+    margin: 0.5em auto;
+}
+.quote p:first-child{
+    background: #fafafa;
+    border-radius: 5px;
+    padding: 2em;
+    font-size: 19px;
+    font-weight: 100;
+    color: #000;
+    margin: 1em auto;
+}
+.quote p:nth-child(2) {
+    font-size: 22px;
+    font-weight: 700;
+}
+.quote p:nth-child(3) {
+    font-weight: 500;
+}
+.maincircle {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin: 2em auto;
+}
+.circle {
+    width: 10px;
+    height: 10px;
+    border-radius: 5px;
+    background-color: rgba(250,250,250,0.5);
+    margin: 0.5em;
+}
+.circle:last-child {
+    background-color: #fafafa;
+}
+.blog {
+    background: url("../img/blog-bg.jpg");
+    background-size: 115%;
+    background-repeat: no-repeat;
+}
+.blogmenu {
+    background: rgba(0,0,0,0.5);
+}
+.blogmenu ul li {
+    padding: 0.5em 1em;
+    background: #fafafa;
+    color: #000;
+    margin: 2em 0;
+    font-weight: 700;
+    text-align: center;
+}
+.blogmenu ul li:first-child{
+    color: #F6C35B;
+}
+.blog article{
+    display: flex;
+    flex-direction: column;
+    padding: 2em;
+    width: 70%;
+}
+.blog article img, .blog article div{
+    width: 71%;
+}
+.blog article div {
+    background-color: #fafafa;
+    padding: 2em;
+}
+.date {
+    color: #3DC1CD;
+    font-weight: 700;
+    font-size: 17px;
+    line-height: 25px;
+}
+.date + p{
+    font-size: 16px;
+    line-height: 25px;
+    margin: 1em 0;
+}
+.contact {
+    background: #596065;
+    padding: 4em;
+    text-align: center;
+    color: #fafafa;
+}
+.contact h2 {
+    width: 20%;
+    margin: 0 auto;
+}
 
+.contact p {
+    width: 30%;
+    margin: 1em auto;
+
+}
+
+.buttoncontact {
+    width: 15%;
+    margin: 2em auto;
+    cursor: pointer;
+}
+
+iframe{
+    width: 100%;
+}
+footer {
+    color: #fafafa;
+    display: flex;
+    justify-content: space-evenly;
+    padding: 3em 0;
+}
+.location {
+    width: 20%;
+}
+
+.template {
+    color: #F6C35B;
+    font-weight: 700;
+}
+footer h2 {
+    text-transform: uppercase;
+    margin-bottom: 2em;
+}
+.adress {
+    display: flex;
+}
+.adress p {
+    margin-right: 1em;
+}
+.adress p:first-child{
+    border-right: #fafafa 1px solid;
+}
+.socialicons {
+    font-size: 20px;
+    color: #383B3C;
+    background: #fafafa;
+    border-radius: 15px;
+    width: 30px;
+    height: 30px;
+    padding: 5px;
+}
+.copyright {
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+}
 @media screen and (max-width: 700px) {
-    .fa-bars {
+    .burger1 {
         display: block;
     }
     .flex ul {
@@ -173,13 +392,17 @@ h1 {
     .burger {
         position: absolute;
     }
-    .burger:checked + ul {
+    .burger:checked + label i{
+        transform: rotate(90deg);
+        transition: 1ms;
+    }
+    .burger:checked ~ ul {
         display: block;
         position: fixed;
         left: calc(50% - 170px);
         top: 15%;
     }
-    .burger:checked + ul li {
+    .burger:checked ~ ul li {
         font-size: 35px;
         padding: 1em;
         width: 340px;
@@ -189,8 +412,146 @@ h1 {
     }
     .about {
         flex-wrap: wrap;
+        background: #fafafa;
     }
     .card {
         width: 100%;
+        background: url('../img/about-bg.jpg');
+        background-position: center;
+    }
+    .card h2, .card p {
+        width: 75%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .card h2 {
+        font-size: 35px;
+    }
+    .card p{
+        font-size: 25px;
+    }
+    .portfolio{
+        display: block;
+    }
+    .gallerymenu, .gallery {
+        width: 100%;
+    }
+    .gallery, .blog {
+        display: block;
+        text-align: center;
+    }
+    .gallerymenu {
+        padding: 1em 0;
+        text-align: center;
+    }
+    .gallerymenu h2 {
+        width: 50%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .gallerymenu p {
+        width: 60%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+    .gallerymenu ul {
+        opacity: 0;
+        position: absolute;
+        width: 100%;
+    }
+    .gallerymenu ul li {
+        background-color: #3CC4D0;
+        width: 50%;
+        margin: 0 auto;
+        padding: 1em;
+    }
+    .gallerybtn:checked ~ ul {
+        opacity: 1;
+    }
+    .burger2 {
+        display: inline-block;
+        width: 50px;
+        height: 50px;
+        padding: 10px;
+        font-size: 30px;
+        background: rgba(0,0,0,0.5);
+    }
+    .gallerybtn:checked + label {
+        transform: rotate(90deg);
+    }
+    .blog {
+        background-size: cover;
+        background-position: center;
+    }
+    .blogmenu , .blog article {
+        width: 100%;
+    }
+    .blog article{
+        padding: 2em;
+    }
+    .blogmenu {
+        padding: 2em;
+    }
+    .blogmenu ul{
+        width: 50%;
+        margin: 1em auto ;
+    }
+    .blogmenu h2 {
+        width: 40%;
+        margin: 1em auto;
+    }
+    .blogmenu p {
+        width: 70%;
+        font-size: 20px;
+        margin: 1em auto;
+    }
+    .blog article img, .blog article div {
+        width: 90%;
+        margin: 0 auto;
+    }
+    .contact h2 {
+        width: 40%;
+    }
+    .contact p{
+        width: 60%;
+        font-size: 20px;
+    }
+    .buttoncontact{
+        width: 40%;
+    }
+    footer {
+        flex-direction: column-reverse;
+        align-items: center;
+        text-align: center;
+    }
+    .copyright {
+        order: 1;
+    }
+    .location {
+        width: 50%;
+    }
+    .location {
+        order: 4;
+    }
+    .info {
+        order: 3;
+    }
+    .social {
+        order: 2;
+    }
+    .adress p{
+        width: 50%;
+        margin: 0;
+    }
+    .copyright,.location,.info,.social {
+        margin: 1em auto;
+    }
+    .socialicons {
+        width: 50px;
+        height: 50px;
+        border-radius: 25px;
+        font-size: 34px;
+        padding: 7px;
+        margin: 0 1em;
     }
 }
