--- a/objet/style.css
+++ b/objet/style.css
@@ -4,25 +4,71 @@
     box-sizing: border-box;
 }
 body {
+    margin: 0;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-evenly;
-    background-color: #fafafa;
+    align-items: center;
+    justify-content: center;
+    min-height: 100vh;
+    background-size: cover;
 }
 .game {
-    margin: 2em 0;
-    width: 21%;
-    height: 400px; 
+    width: 100%;
+    height: 100%; 
     text-align: center;
     padding: 2em;
     color: #fafafa;
     text-shadow: 0 0 5px #000000, 0 0 5px #000000, 0 0 5px #000000, 0 0 5px #000000, 0 0 5px #000000, 0 0 5px #000000, 0 0 5px #000000, 0 0 5px #000000;
+    margin: 0;
+    display: inline-block;
+    background-size: cover;
+    flex-shrink: 0;
 }
-.gamehover {
+/* .gamehover {
     margin: 2em 0;
-    width: 21%;
+    width: 400px;
     height: 400px; 
+    text-align: center;
     padding: 2em;
-    color : "rgb(0, 0, 0)";
+    color : black;
     text-shadow : "none";
+} */
+#carrousel {
+    width: 400px;
+    height: 400px;
+    border: solid 4px #FFF;
+    box-shadow: 0 0 14px rgba(0, 0, 0, 0.3);
+    position: relative;
+    overflow: hidden;
+}
+#container {
+    width: 400px;
+    height: 400px;
+    display:flex;
+}
+
+.bouton {
+    font-size: 70px;
+    color: #fafafa;
+    position: absolute;
+    cursor: pointer;
+    top: calc(50% - 30px);
+    transition: all 0.3s ease;
+}
+#g{
+    left: 0;
+    opacity: 0.4;
+    transform: rotate(270deg);
+}
+#d{
+    right: 0;
+    opacity: 0.4;
+    transform: rotate(90deg);
+}
+#g:hover{
+    transform: rotate(270deg) scale(1.1);
+    opacity: 1;
+}
+#d:hover{
+    transform: rotate(90deg) scale(1.1);
+    opacity: 1;
 }
