--- a/nodeBack/IHM/404.ejs
+++ b/nodeBack/IHM/404.ejs
@@ -7,15 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <h1>Mon Application TodoList</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Accueil</a></li>
-                <li><a href="#">A propos</a></li>
-            </ul>
-        </nav>
-    </header>
+    <%- include('./component/header') %>
     <h2>Page introuvable</h2>
 </body>
 </html>
