--- a/nodeBack/IHM/apropos.ejs
+++ b/nodeBack/IHM/apropos.ejs
@@ -7,15 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <header>
-        <h1>Mon Application TodoList</h1>
-        <nav>
-            <ul>
-                <li><a href="#">Accueil</a></li>
-                <li><a href="#">A propos</a></li>
-            </ul>
-        </nav>
-    </header>
+    <%- include('./component/header') %>
     <h2>A propos :</h2>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit temporibus quasi quod cum quaerat? Corrupti earum quis itaque blanditiis consequatur pariatur, natus, dicta cum voluptates quibusdam non ea, nam facere fugit. Tempore recusandae repellendus eum eius corrupti, facilis, magnam illo distinctio aperiam officiis maiores tempora ratione minima quaerat id molestiae?</p>
     <p>Veniam explicabo iste consectetur similique officiis culpa, maiores error ex labore non voluptatibus velit vitae cum voluptatum voluptatem ea ducimus totam! Architecto voluptas consectetur, voluptatum quae, in numquam similique sunt ratione quo ullam ducimus omnis a placeat culpa, praesentium repellendus. Dolore asperiores, obcaecati non cupiditate sapiente quam. Reprehenderit, aperiam quisquam!</p>
