--- a/nodeBack/IHM/component/header.ejs
+++ b/nodeBack/IHM/component/header.ejs
@@ -1,5 +1,5 @@
 <header>
-    <h1>Mon Application TodoList <%=humain.name%></h1>
+    <h1>Mon Application TodoList</h1>
     <nav>
         <ul>
             <li><a href="#">Accueil</a></li>
