--- a/nodeBack/IHM/index.ejs
+++ b/nodeBack/IHM/index.ejs
@@ -20,7 +20,7 @@
     </section>
     <section>
         <h2>Liste des tâches :</h2>
-        <% tache.map((el) => { %>
+        <% data.map((el) => { %>
             <div>
             <h3><%= el.titre %></h3>
             <p><%= el.description %></p>
