--- a/nodeBack/IHM/erreur.ejs
+++ b/nodeBack/IHM/erreur.ejs
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404</title>
+    <title>Erreur</title>
 </head>
 <body>
     <%- include('./component/header') %>
-    <h2>Page introuvable</h2>
+    <h2>Une erreur est survenue</h2>
+    <h3><%= error %></h3>
 </body>
 </html>
