--- a/nodeBack/IHM/errorvide.ejs
+++ b/nodeBack/IHM/errorvide.ejs
@@ -4,10 +4,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>404</title>
+    <title>Document</title>
 </head>
 <body>
     <%- include('./component/header') %>
-    <h2>Page introuvable</h2>
+    <section>
+        <h1>Un ou tout les champs sont vides.</h1>
+        <a href="/">Retour à l'accueil.</a>
+    </section>
+   
 </body>
 </html>
